--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <header class="nav">
         <div class="container nav__inner">
-            <a href="index.html" class="nav__logo">RapChef</a>
+            <a href="index.html" class="nav__logo">
+                <img src="logotipo-rapchef.jpg" alt="RapChef">
+            </a>
             <button class="nav__toggle" id="mobileMenuToggle" aria-expanded="false" aria-controls="navLinks">
                 <span></span>
                 <span></span>
