--- a/index.html
+++ b/index.html
@@ -31,23 +31,18 @@
     </header>
 
     <main>
-        <section class="hero section">
-            <div class="container hero__grid">
-                <div class="hero__content">
-                    <span class="hero__eyebrow">Geladeiras Inteligentes</span>
-                    <h1 class="hero__title">Alimentação 24/7 em Comodato</h1>
-                    <p class="hero__subtitle">Refeições caseiras prontas na sua geladeira inteligente, 24 horas por dia, sem esforço.</p>
-                    <div class="hero__actions">
-                        <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Entre em Contato</a>
-                        <a href="peca-sua-geladeira.html" class="btn btn-ghost">Peça sua Geladeira</a>
-                    </div>
-                </div>
-                <div class="hero__media">
-                    <div class="hero__media-card">
-                        <h3>Cuidado caseiro em cada prato</h3>
-                        <p>Ingredientes frescos, sem conservantes. Reposição diária e variedade para cada gosto.</p>
-                        <span class="hero__badge">35 tipos de refeições • 24h</span>
-                    </div>
+        <section class="hero hero--video">
+            <video class="hero-video" src="VideoHome.mp4" autoplay muted loop playsinline poster="logotipo-rapchef.jpg">
+                <source src="VideoHome.mp4" type="video/mp4">
+            </video>
+            <div class="hero-overlay"></div>
+            <div class="hero__content">
+                <span class="hero__eyebrow">Geladeiras Inteligentes</span>
+                <h1 class="hero__title">Alimentação 24/7 em Comodato</h1>
+                <p class="hero__subtitle">Refeições caseiras prontas na sua geladeira inteligente, 24 horas por dia, sem esforço.</p>
+                <div class="hero__actions">
+                    <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Entre em Contato</a>
+                    <a href="peca-sua-geladeira.html" class="btn btn-ghost">Peça sua Geladeira</a>
                 </div>
             </div>
         </section>
