--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <h1 class="hero__title">Alimentação 24/7 em Comodato</h1>
                 <p class="hero__subtitle">Refeições caseiras prontas na sua geladeira inteligente, 24 horas por dia, sem esforço.</p>
                 <div class="hero__actions">
-                    <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Entre em Contato</a>
-                    <a href="peca-sua-geladeira.html" class="btn btn-ghost">Peça sua Geladeira</a>
+                    <a href="peca-sua-geladeira.html" class="btn btn-primary">Peça sua Geladeira</a>
+                    <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-ghost">Fale no WhatsApp</a>
                 </div>
             </div>
         </section>
@@ -61,78 +61,25 @@
             </div>
         </section>
 
-        <section class="section">
-            <div class="container">
-                <h2 class="section__title">Por que escolher a RapChef?</h2>
-                <p class="section__subtitle">Tecnologia, praticidade e refeições artesanais na hora.</p>
-                <div class="features-grid">
-                    <article class="card feature-card">
-                        <h3>Disponibilidade Total</h3>
-                        <p>Disponibilidade 24 horas por dia, 7 dias por semana.</p>
+        <section class="section section--compact">
+            <div class="container credibility">
+                <div class="credibility__cards">
+                    <article class="credibility__card">
+                        <div class="credibility__title">Variedade</div>
+                        <div class="credibility__text">Mais de 35 refeições caseiras.</div>
                     </article>
-                    <article class="card feature-card">
-                        <h3>Variedade</h3>
-                        <p>35 tipos de refeições caseiras diferentes.</p>
+                    <article class="credibility__card">
+                        <div class="credibility__title">Operação completa</div>
+                        <div class="credibility__text">Abastecimento, logística e gestão pela RapChef.</div>
                     </article>
-                    <article class="card feature-card">
-                        <h3>Qualidade Premium</h3>
-                        <p>Refeições sem conservantes e de extrema qualidade.</p>
+                    <article class="credibility__card">
+                        <div class="credibility__title">Custo zero</div>
+                        <div class="credibility__text">Sem custo operacional para empresas ou condomínios.</div>
                     </article>
-                    <article class="card feature-card">
-                        <h3>Pagamento Flexível</h3>
-                        <p>Cartão, VR, VA e PIX.</p>
+                    <article class="credibility__card">
+                        <div class="credibility__title">Nosso equipamento</div>
+                        <div class="credibility__text">Freezer RapChef com trava e liberação via pagamento.</div>
                     </article>
-                </div>
-            </div>
-        </section>
-
-        <section class="section">
-            <div class="container">
-                <h2 class="section__title">Benefícios para Todos</h2>
-                <p class="section__subtitle">Uma solução completa que conecta praticidade e gastronomia em empresas e condomínios.</p>
-                <div class="benefits-grid">
-                    <article class="card benefit-card">
-                        <h3>Para Moradores e Colaboradores</h3>
-                        <ul>
-                            <li>Acesso 24/7 a refeições de qualidade</li>
-                            <li>35 tipos de refeições diferentes</li>
-                            <li>Sem necessidade de aplicativos</li>
-                            <li>Pagamento flexível: Cartão, VR, VA e PIX</li>
-                        </ul>
-                    </article>
-                    <article class="card benefit-card">
-                        <h3>Para Condomínios e Empresas</h3>
-                        <ul>
-                            <li>Instalação e manutenção com custo zero</li>
-                            <li>Segurança integrada</li>
-                            <li>Valorização do imóvel</li>
-                        </ul>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-        <section class="section process">
-            <div class="container">
-                <h2 class="section__title">Vamos Começar?</h2>
-                <p class="section__subtitle">Descubra como é simples transformar o seu espaço em um ponto de alimentação saudável e acessível.</p>
-                <div class="process-steps">
-                    <div class="process-step">
-                        <div class="process-step__number">1</div>
-                        <p>Entre em contato para agendar uma conversa.</p>
-                    </div>
-                    <div class="process-step">
-                        <div class="process-step__number">2</div>
-                        <p>Envio do Kit degustação.</p>
-                    </div>
-                    <div class="process-step">
-                        <div class="process-step__number">3</div>
-                        <p>Proposta personalizada e fechamento do negócio.</p>
-                    </div>
-                    <div class="process-step">
-                        <div class="process-step__number">4</div>
-                        <p>Instalação rápida e início da operação.</p>
-                    </div>
                 </div>
             </div>
         </section>
@@ -140,11 +87,10 @@
         <section class="section">
             <div class="container">
                 <div class="cta">
-                    <h2 class="section__title">Experimente nossas refeições e transforme seu espaço!</h2>
-                    <p class="cta__text">Mais do que geladeiras inteligentes, oferecemos uma solução completa que agrega valor, gera receita e melhora a qualidade de vida de moradores e colaboradores.</p>
+                    <h2 class="section__title">Quer refeições prontas e sem operação?</h2>
                     <div class="hero__actions">
-                        <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Entre em Contato</a>
-                        <a href="peca-sua-geladeira.html" class="btn btn-ghost">Peça sua Geladeira</a>
+                        <a href="peca-sua-geladeira.html" class="btn btn-primary">Peça sua Geladeira</a>
+                        <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-ghost">Fale no WhatsApp</a>
                     </div>
                 </div>
             </div>
