--- a/peca-sua-geladeira.html
+++ b/peca-sua-geladeira.html
@@ -42,14 +42,15 @@
         <section class="section">
             <div class="container request-grid">
                 <article class="card request-card">
-                    <h2>Por que ter uma geladeira RapChef?</h2>
+                    <h2>Operação completa por nossa conta</h2>
                     <ul>
-                        <li>Instalação e manutenção com custo zero.</li>
-                        <li>Alimentação 24/7 para moradores ou colaboradores.</li>
-                        <li>35 tipos de refeições caseiras diferentes.</li>
-                        <li>Sistema totalmente automatizado.</li>
-                        <li>Valorização do imóvel.</li>
-                        <li>Segurança integrada.</li>
+                        <li>Equipamento RapChef (geladeira é nossa).</li>
+                        <li>Instalação e manutenção sem custo.</li>
+                        <li>Reabastecimento, logística e gestão operacional.</li>
+                        <li>Segurança e monitoramento por nossa equipe.</li>
+                        <li>Disponível 24h para seus usuários.</li>
+                        <li>35 tipos de refeições caseiras.</li>
+                        <li>Pagamento: Cartão, VR, VA e PIX.</li>
                     </ul>
                 </article>
                 <article class="card form-card">
@@ -97,11 +98,36 @@
                 </article>
             </div>
         </section>
+
+        <section class="section process">
+            <div class="container">
+                <h2 class="section__title">Vamos Começar?</h2>
+                <p class="section__subtitle">Descubra como é simples transformar o seu espaço em um ponto de alimentação saudável e acessível.</p>
+                <div class="process-steps">
+                    <div class="process-step">
+                        <div class="process-step__number">1</div>
+                        <p>Entre em contato para agendar uma conversa.</p>
+                    </div>
+                    <div class="process-step">
+                        <div class="process-step__number">2</div>
+                        <p>Envio do Kit degustação.</p>
+                    </div>
+                    <div class="process-step">
+                        <div class="process-step__number">3</div>
+                        <p>Proposta personalizada e fechamento do negócio.</p>
+                    </div>
+                    <div class="process-step">
+                        <div class="process-step__number">4</div>
+                        <p>Instalação rápida e início da operação.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section section--compact">
             <div class="container">
                 <div class="contact-banner">
                     <h2 class="section__title">Prefere falar diretamente?</h2>
-                    <p>Entre em contato conosco agora mesmo e descubra como implementar a RapChef no seu espaço.</p>
+                    <p>Instalação, manutenção, reabastecimento e operação ficam conosco. Vamos conversar.</p>
                     <div class="contact-banner__actions">
                         <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-primary">WhatsApp</a>
                         <a href="mailto:michael.mm@rapchef.com.br" class="btn btn-ghost">E-mail</a>
